Fix overflow on lexicon modals

--- a/packages/simulator/src/index.css
+++ b/packages/simulator/src/index.css
@@ -165,19 +165,6 @@ body {
 	}
 }
 
-.item-excerpt {
-	margin: 0.5rem 0 0 0;
-	color: var(--text-light);
-	font-size: 0.9em;
-	margin-bottom: 0.5rem;
-	border-bottom: 1px solid var(--border);
-	text-align: justify;
-	padding-top: 0;
-	padding-right: 0.5em;
-	padding-left: 0.5em;
-	padding-bottom: 0.5em;
-}
-
 .item-header {
 	display: flex;
 	justify-content: space-between;
